# OpEnUV

./: .dockerignore  .gitignore  2026-07-07-EUV-Projektplan-OPUS.md  2026-07-07-OPUS-plan.md  AGENT_FINISH_PROMPT.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPLETION_PLAN.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cli  LICENSE  MANIFEST.in  NOTICE  README.md  SECURITY.md  _debug2.py  _debug3.py  _debug4.py  _debug_abbe.py  _debug_direct.py  _debug_grid.py  _debug_grid2.py  _debug_orders.py  _test_full.py  _test_ml.py  docker-compose.cli.yml  docker-compose.yml  pyproject.toml  run.py  session-context.md  session-kontext.md  testberechnungen.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
_docs/: 2026-07-07-EUV-Lithographie-Simulator-Recherche.md  2026-07-07-EUV-Lithographie-Simulator-Strategie-DESTRUKTIVER-REVIEW.md  2026-07-07-EUV-Lithographie-Simulator-Strategie.md  destructive-review.md  research.md  strategy.md
data/: .gitkeep
data/cxro/: Ac.csv  Ag.csv  Al.csv  Au.csv  B.csv  C.csv  Ca.csv  Ce.csv  Cr.csv  Cs.csv  Cu.csv  Dy.csv  Er.csv  F.csv  Fr.csv  Ga.csv  Ge.csv  He.csv  Ho.csv  I.csv  Ir.csv  Kr.csv  La.csv  Lu.csv  Mg.csv  Mo.csv  Nd.csv  Ne.csv  Ni.csv  O.csv  P.csv  Pa.csv  Pm.csv  Po.csv  Pr.csv  Ra.csv  Rb.csv  Re.csv  Rn.csv  Sb.csv  (+13 more)
docs/: architecture.rst  conf.py  index.rst  install.rst  license.rst  overview.rst  quickstart.rst
docs/_build/html/: .buildinfo  .buildinfo.bak  architecture.html  contributing.html  genindex.html  index.html  install.html  license.html  objects.inv  overview.html  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/_build/html/.doctrees/: architecture.doctree  contributing.doctree  index.doctree  install.doctree  license.doctree  overview.doctree  quickstart.doctree
docs/_build/html/.doctrees/api/: modules.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/euv/: materials.html  pipeline.html
docs/_build/html/_modules/euv/accel/: device.html  vram_budget.html
docs/_build/html/_modules/euv/aerial/: abbe.html  pupil.html  source.html
docs/_build/html/_modules/euv/api/: main.html
docs/_build/html/_modules/euv/calibrate/: wafer_fit.html
docs/_build/html/_modules/euv/etch/: bias.html
docs/_build/html/_modules/euv/io/: cli.html  gds.html
docs/_build/html/_modules/euv/mask3d/: rcwa_torch.html
docs/_build/html/_modules/euv/metro/: cd.html  process_window.html
docs/_build/html/_modules/euv/optics/: multilayer.html  tmm.html
docs/_build/html/_modules/euv/resist/: develop.html  exposure.html  peb.html  stochastic.html
docs/_build/html/_modules/euv/source/: plasma.html
docs/_build/html/_sources/: contributing.rst.txt
docs/_build/html/_sources/api/: modules.rst.txt
docs/_build/html/api/: modules.html
docs/api/: modules.rst
docs/tutorials/: basic_simulation.ipynb  materials.ipynb  process_window.ipynb
notebooks/: 01_aerial_image.ipynb  02_nils_cd.ipynb  03_resist_chain.ipynb  04_process_window.ipynb  05_stochastics.ipynb  06_mask3d.ipynb  README.md  process_window_cd.csv  process_window_metrics.json
scripts/: download_cxro.py  download_cxro.sh  gen_notebooks.py  run_tests.sh  setup_github.sh
src/euv/: __init__.py  constants.py  materials.py  pipeline.py
src/euv/accel/: __init__.py  chunked.py  device.py  mixed_precision.py  vram_budget.py
src/euv/aerial/: __init__.py  abbe.py  hopkins.py  pupil.py  source.py
src/euv/api/: __init__.py  main.py  schemas.py
src/euv/api/static/: app.js  index.html  simulate.html  style.css
src/euv/calibrate/: __init__.py  wafer_fit.py
src/euv/data/cxro/: Ar.csv  As.csv  At.csv  Ba.csv  Be.csv  Bi.csv  Br.csv  Cd.csv  Cl.csv  Co.csv  Eu.csv  Fe.csv  Gd.csv  H.csv  Hf.csv  Hg.csv  In.csv  K.csv  Li.csv  Mn.csv  N.csv  Na.csv  Nb.csv  Os.csv  Pb.csv  Pd.csv  Pt.csv  Rh.csv  Ru.csv  S.csv  Sc.csv  Tc.csv  Te.csv  Ti.csv  Tl.csv  Tm.csv  W.csv  Yb.csv  Zr.csv
src/euv/etch/: __init__.py  bias.py
src/euv/io/: __init__.py  cli.py  gds.py  rasterize.py
src/euv/mask3d/: __init__.py  geometry.py  rcwa2d.py  rcwa_torch.py
src/euv/metro/: __init__.py  cd.py  process_window.py  sem_render.py
src/euv/opc/: __init__.py  openilt_bridge.py
src/euv/optics/: __init__.py  collector.py  multilayer.py  plot.py  tmm.py
src/euv/resist/: __init__.py  develop.py  exposure.py  peb.py  stochastic.py
src/euv/source/: __init__.py  plasma.py  spectrum.py
tests/: test_accel.py  test_api.py  test_benchmarks.py  test_calibrate.py  test_collector.py  test_constants.py  test_docker.py  test_enhancements.py  test_etch.py  test_full_chem_config.py  test_geometry.py  test_high_na.py  test_hopkins.py  test_io.py  test_materials.py  test_metro.py  test_multilayer.py  test_openilt_bridge.py  test_peb_laplacian.py  test_pipeline.py  test_pupil.py  test_rcwa.py  test_rcwa2d.py  test_reference_nils.py  test_release.py  test_resist.py  test_source.py  test_source_plasma.py  test_stochastic.py  test_stochastic_pipeline.py  test_tmm.py  test_validation.py  test_webui.py
video/: concat.txt  concat_hd.txt  plan.md  script.py
video/media/Tex/: 6467bf68d60377f3.tex
video/media/videos/1080p60/partial_movie_files/Scene1_Title/: partial_movie_file_list.txt
video/media/videos/script/1080p60/partial_movie_files/Scene1_Title/: partial_movie_file_list.txt
video/media/videos/script/1080p60/partial_movie_files/Scene2_LightSource/: partial_movie_file_list.txt
video/media/videos/script/1080p60/partial_movie_files/Scene3_Mask/: partial_movie_file_list.txt
video/media/videos/script/1080p60/partial_movie_files/Scene4_Optics/: partial_movie_file_list.txt
video/media/videos/script/1080p60/partial_movie_files/Scene5_AerialImage/: partial_movie_file_list.txt
video/media/videos/script/1080p60/partial_movie_files/Scene6_Resist/: partial_movie_file_list.txt
video/media/videos/script/1080p60/partial_movie_files/Scene7_Development/: partial_movie_file_list.txt
(+9 files in other folders)
