[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "euv"
version = "0.1.0"
description = "Open Source EUV Lithography Simulator"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "OpEnUV Contributors"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "torch>=2.1",
    "matplotlib>=3.7",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "pydantic>=2.0",
    "typer>=0.9",
    "httpx>=0.25",
    "gdstk>=0.9",
]

[project.urls]
Homepage = "https://github.com/your-org/OpEnUV"
Repository = "https://github.com/your-org/OpEnUV"
Documentation = "https://openeuv.readthedocs.io/"
Issues = "https://github.com/your-org/OpEnUV/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.11",
    "ruff>=0.1",
    "sphinx>=7.2",
    "sphinx-rtd-theme>=1.3",
    "mypy>=1.7",
]

[project.scripts]
euv = "euv.io.cli:app"

[tool.setuptools]
include_package_data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "N", "I", "D"]
ignore = ["D100", "D104", "D401", "D413"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true