[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openuv"
version = "1.0.3"
description = "Open Source EUV Lithography Simulator — from plasma source to CD metrology"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Flowbudget"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "torch>=2.1",
    "matplotlib>=3.7",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "pydantic>=2.0",
    "typer>=0.9",
    "httpx>=0.25",
    "gdstk>=0.9",
]

[project.urls]
Homepage = "https://github.com/Flowbudget/OpEnUV"
Repository = "https://github.com/Flowbudget/OpEnUV"
Documentation = "https://openeuv.readthedocs.io/"
Issues = "https://github.com/Flowbudget/OpEnUV/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.11",
    "ruff>=0.1",
    "sphinx>=7.2",
    "sphinx-rtd-theme>=1.3",
    "mypy>=1.7",
    "tomli>=2.0",
]
test = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.0",
]
notebook = [
    "jupyter>=1.0",
    "nbconvert>=7.0",
    "ipykernel>=6.0",
]

[project.scripts]
euv = "euv.io.cli:app"
openuv = "euv.io.cli:app"

[tool.setuptools]
include-package-data = true
packages.find = {where = ["src"]}

[tool.setuptools.package-data]
euv = ["data/**/*", "api/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "N", "I", "D"]
ignore = [
    "D100", "D104", "D401", "D413",
    "D203", "D205", "D211", "D212", "D213", "D415", "D417", "D301", "D400",
    "D105", "D107",
    "N802", "N803", "N806", "N812", "N815", "E741", "F841",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D101", "D102", "D103", "D105", "D107", "F841", "F401"]
"docs/conf.py" = ["D", "F401"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true